<resources>
    <string name="app_name">Samtadoot</string>
    <string name="exit_app_string">आपल्याला ऍप बंद करायचा आहे काय?</string>
    <string name="yes">होय</string>
    <string name="no">नाही</string>
    <string name="loading">कृपाया प्रतिक्षा करा...</string>

    <string name="save">जतन करा</string>
    <string name="user_type">वापरकर्ता प्रकार</string>
    <string name="user_id">वापरकर्ता आयडी</string>
    <string name="login">लॉगिन</string>
    <string name="otp_msg">कृपया रजिस्टर मोबाईल नंबर पाठविलेली \n कोड टाईप  करा</string>
    <string name="login_msg">कृपया योग्य वापरकर्ता आयडी \n टाइप करा</string>
    <string name="otp_resend"><u>पुन्हा पाठवा</u></string>
    <string name="submit">सबमिट करा </string>

    <string name="sync_all_data_from_server">सर्व्हर वरून सर्व डेटा गोळा करा</string>
    <string name="sync_candidate_forms">सर्वेक्षण फॉर्म अपलोड करा</string>
    <string name="last_sync">शेवटचं Sync:</string>
    <string name="compare_question1">घरातील सर्व सदस्य कामावर गेले आहेत</string>

    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="anukramank">अनुक्रमांक</string>
    <string name="message_on_back_button_pressed">आपला डेटा जतन होणार नाही</string>
    <string name="message_on_save_button_pressed">आपण आपला फॉर्म जतन करू इच्छिता?</string>
    <string name="fill_this_editBox_errorMessage">हे भरा.</string>
    <string name="please_fill_valid_userID">कृपया  वापरकर्ता आयडी बरोबर टाका.</string>
    <string name="please_fill_valid_otp">कृपया रजिस्टर मोबाइल नंबर वर पाठविलेला कोड टाईप करा.</string>
    <string name="data_sync_finished_successfully">सर्वेक्षण फॉर्म यशस्वीरित्या लोड झाला.</string>
    <string name="nothing_to_sync_from_user">वापरकर्त्याकडून अपलोड करण्यासाठी काहीही नाही.</string>
    <string name="logout">लॉग ऑऊट</string>
    <string name="sanketank_bhara">संकेतांक भरा</string>
    <string name="divider_v_line">\t|\t</string>

    <string name="other_than_sodun">वरील व्यतिरिक्त (सोडून गेलेली)</string>
    <string name="other_than_mrut">वरील व्यतिरिक्त (मृत)</string>
    <string name="ramai_awas_yojna_title">रमाई आवास योजना (शहरी विभाग) – लाभार्थी प्रपत्र सन 2020-21</string>
    <string name="no_internet_connection">इंटरनेट कनेक्शन नाही</string>
    <string name="dashboard_heading">आदिवासी विकास विभाग, महाराष्ट्र शासन \nआदिवासी संशोधन व प्रशिक्षण संस्थेमार्फत \nबेंचमार्क सर्वेक्षण – २०१९</string>
    <string name="setting_">आस सेटिंग</string>
    <string name="invalid_response">सर्व्हरकडून अवैध प्रतिसाद</string>
    <string name="sucessfull_login">यशस्वी लॉगिन</string>
    <string name="generic_name">%s.</string>
    <string name="add_another">आणखी जोडा</string>
    <string name="invalid_entry">कृपया सगळी माहिती भरा</string>
    <string name="new_form">नवीन फॉर्म</string>
    <string name="empty">\t</string>
    <string name="empty_user_id">यूजर आय डी रिक्त आहे</string>
    <string name="empty_otp">ओटिपी  रिक्त आहे</string>
    <string name="please_enable_gps">जीपीएस चालू करा</string>
    <string name="no_data_found">माहिती मिळत नाहीये!</string>
    <string name="do_you_want_to_delete">आपल्याला डिलीट करायचं आहे का??</string>
    <string name="capture_image">फोटो काढण्यासाठी शेजारील बटण वर क्लिक करा</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="no_close_the_app">NO Close The App</string>
    <string name="first_fill_first_section">"आधी पहिला सेक्शन भरणे बंधनकारक आहे"</string>
    <string name="last_updated">Last Updated :</string>
    <string name="calculate">Calculate</string>
    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
    </array>


</resources>