<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="presenter"
            type="com.encureit.samtadoot.presenter.LoginPresenter"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_logo_465x454" />

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/user_type"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text">

            <Spinner
                android:id="@+id/etUserType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login_msg"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/user_id"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/sanketank_bhara"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:text="@={presenter.userId}"
            android:singleLine="true"
            android:focusable="true"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:onClick="@{ () -> presenter.doLogin()}"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</layout>
