<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.encureit.samtadoot.presenter.OtpPresenter"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <!--<androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app_logo_465x454" />
        <!--android:src="@mipmap/ic_launcher"-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="30dp"
            android:text="@string/otp_msg"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_below="@+id/tv_header">

            <com.goodiebag.pinview.Pinview
                android:id="@+id/pinview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:pinWidth="40dp"
                app:pinHeight="40dp"
                app:pinLength="4"
                app:cursorVisible="true"
                app:forceKeyboard="true"
                app:hint="0"
                app:inputType="number"
                app:pinBackground="@drawable/white_background_xml"
                app:textSize="12sp"
                android:padding="2dp"
                android:textColor="@color/textBlackColor"/>
            <!--app:password="true"-->
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_otp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/otp_resend"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_below="@+id/tv_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:onClick="@{ () -> presenter.sendOtp()}"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <!--</androidx.core.widget.NestedScrollView>-->
    </RelativeLayout>
</layout>